--- a/styles.scss
+++ b/styles.scss
@@ -35,6 +35,11 @@ body {
   gap: 40px;
   padding-bottom: 120px;
 
+  &_padding  {
+    padding-top: 264px;
+    padding-bottom: 261px;
+  }
+
 
   &__title {
     width: 368px;
@@ -57,6 +62,7 @@ body {
     }
 
 
+
   }
 
 
@@ -73,9 +79,6 @@ body {
     height: 56px;
 
 
-    &_shadow {
-      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    }
 
     @media (max-width: 400px) {
       width: 256px;
@@ -146,6 +149,15 @@ body {
     gap: 24px;
   }
 
+  &_padding {
+
+
+    @media (max-width: 400px) {
+        padding-top: 32px;
+        padding-bottom: 97px;
+
+    }
+  }
 
 
 }
@@ -170,6 +182,7 @@ body {
     background: #7297FF;
     border-radius: 8px;
     border: none;
+
 
 
     &:hover {
@@ -205,7 +218,16 @@ body {
       font-size: 15px;
       line-height: 19px;
     }
+
+    &_size {
+      width: 138px;
+
+      @media (max-width: 400px) {
+        width: 116px;
+      }
+    }
   }
+
 
   @media (max-width: 700px) {
     margin-left: auto;
@@ -221,6 +243,8 @@ body {
   @media (max-width: 300px) {
     width: 180px;
   }
+
+
 }
 
 
@@ -229,6 +253,15 @@ body {
   width: 262px;
   display: flex;
   justify-content: space-between;
+
+  &_size {
+    width: 270px;
+  }
+
+  &_sign-in-position {
+    margin-left: -110px;
+    margin-top: -8px;
+  }
 
   &__text {
     color: #A1ABC9;
