--- a/styles.scss
+++ b/styles.scss
@@ -25,6 +25,11 @@ body {
   @media (max-width: 700px) {
     flex-direction: column;
   }
+
+  @media (max-width: 700px) {
+    background: url("assets/images/bg-small.png");
+    background-size: contain;
+  }
 }
 
 .form {
@@ -35,7 +40,7 @@ body {
   gap: 40px;
   padding-bottom: 120px;
 
-  &_padding  {
+  &_padding {
     padding-top: 264px;
     padding-bottom: 261px;
   }
@@ -51,6 +56,11 @@ body {
     line-height: 26px;
     color: #202225;
 
+    &_size_restore-password {
+      width: 328px;
+
+    }
+
     @media (max-width: 400px) {
       width: 256px;
       font-size: 20px;
@@ -59,8 +69,8 @@ body {
 
     @media (max-width: 300px) {
       width: 180px;
+      font-size: 17px;
     }
-
 
 
   }
@@ -77,7 +87,6 @@ body {
     border-radius: 8px;
     width: 368px;
     height: 56px;
-
 
 
     @media (max-width: 400px) {
@@ -149,17 +158,46 @@ body {
     gap: 24px;
   }
 
+  &__description {
+    margin-top: -8px;
+    width: 368px;
+    font-family: "Poppins", sans-serif;
+    font-size: 15px;
+    line-height: 19px;
+    font-style: normal;
+    font-weight: 400;
+    color: #A1ABC9;
+
+    @media (max-width: 400px) {
+      width: 256px;
+    }
+
+    @media (max-width: 300px) {
+      width: 150px;
+      font-size: 13px;
+    }
+  }
+
   &_padding {
 
 
     @media (max-width: 400px) {
-        padding-top: 32px;
-        padding-bottom: 97px;
+      padding-top: 32px;
+      padding-bottom: 97px;
 
     }
   }
 
+  &__back-arrow-link {
+    width: 24px;
+    height: 24px;
+    text-decoration: none;
+    margin-right: 16px;
+  }
 
+  &__label {
+    display: flex;
+  }
 }
 
 
@@ -182,7 +220,6 @@ body {
     background: #7297FF;
     border-radius: 8px;
     border: none;
-
 
 
     &:hover {
@@ -226,6 +263,16 @@ body {
         width: 116px;
       }
     }
+
+    &_size_restore-password {
+      width: 214px;
+
+      @media (max-width: 400px) {
+        width: 198px;
+      }
+    }
+
+
   }
 
 
@@ -270,6 +317,10 @@ body {
     font-weight: normal;
     font-size: 15px;
     line-height: 21px;
+
+    @media (max-width: 300px) {
+      font-size: 13px;
+    }
   }
 
   &__link {
@@ -280,6 +331,10 @@ body {
     line-height: 19px;
     color: #7297FF;
     text-decoration-line: underline;
+
+    @media (max-width: 300px) {
+      font-size: 13px;
+    }
   }
 
   @media (max-width: 700px) {
