task-2: fix validation issue

--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -93,6 +93,7 @@ body {
   position: absolute;
   top: 18px;
   right: 26px;
+  cursor: pointer;
 }
 .form__show-password-icon_show {
   background: url(../assets/icons/visibility.svg) no-repeat;
@@ -110,6 +111,12 @@ body {
   line-height: 120%;
   top: 60px;
   color: #F6657F;
+}
+@media (max-height: 800px) {
+  .form__password-description {
+    font-size: 9px;
+    top: 63px;
+  }
 }
 @media (max-width: 400px) {
   .form__password-description {
