--- a/layout-2/styles.css
+++ b/layout-2/styles.css
@@ -12,6 +12,7 @@ body {
 }
 
 .header {
+  max-width: 2560px;
   width: 93%;
   margin: 0 auto;
   display: flex;
@@ -38,9 +39,10 @@ body {
 }
 
 .board {
+  max-width: 2560px;
   box-sizing: border-box;
   flex-direction: column;
-  padding: 40px;
+  padding: 40px 16px 16px 48px;
   display: flex;
   border-radius: 16px;
   width: 93%;
@@ -48,6 +50,7 @@ body {
   margin: 0 auto;
   height: 89%;
   background: #F9FAFF;
+  box-shadow: 0px 4px 32px rgba(218, 228, 255, 0.32);
 }
 @media (max-width: 460px) {
   .board {
@@ -258,6 +261,7 @@ body {
   background: #FFFFFF;
   border-radius: 12px;
   padding-bottom: 40px;
+  box-shadow: 0px 4px 32px rgba(218, 228, 255, 0.24);
 }
 @media (max-width: 460px) {
   .patient {
@@ -283,7 +287,6 @@ body {
   margin-top: 16px;
   display: flex;
   align-items: flex-start;
-  width: 320px;
 }
 @media (max-width: 1000px) {
   .patient__description-box_margin {
@@ -360,7 +363,6 @@ body {
   font-size: 15px;
   line-height: 140%;
   color: #202225;
-  width: 248px;
 }
 @media (max-width: 1000px) {
   .patient__document-text {
