--- a/layout-2/styles.scss
+++ b/layout-2/styles.scss
@@ -15,6 +15,7 @@ body {
 
 
 .header {
+  max-width: 2560px;
   width: 93%;
   margin: 0 auto;
   display: flex;
@@ -42,9 +43,10 @@ body {
 }
 
 .board {
+  max-width: 2560px;
   box-sizing: border-box;
   flex-direction: column;
-  padding: 40px;
+  padding: 40px 16px 16px 48px;
   display: flex;
   border-radius: 16px;
   width: 93%;
@@ -52,6 +54,7 @@ body {
   margin: 0 auto;
   height: 89%;
   background: #F9FAFF;
+  box-shadow: 0px 4px 32px rgba(218, 228, 255, 0.32);
 
 
   @media (max-width: 460px) {
@@ -266,10 +269,10 @@ body {
 
 
 .patient {
-  //height: 224px;
   background: #FFFFFF;
   border-radius: 12px;
   padding-bottom: 40px;
+  box-shadow: 0px 4px 32px rgba(218, 228, 255, 0.24);
 
   @media (max-width: 460px) {
     min-width: 207px;
@@ -298,8 +301,6 @@ body {
       margin-top: 16px;
       display: flex;
       align-items: flex-start;
-      //justify-content: space-between;
-      width: 320px;
 
 
 
@@ -345,7 +346,6 @@ body {
     width: 188px;
     overflow: hidden;
     text-overflow: ellipsis;
-    //height: 22px;
 
     @media (max-width: 350px) {
       width: 140px;
@@ -385,7 +385,6 @@ body {
     font-size: 15px;
     line-height: 140%;
     color: #202225;
-    width: 248px;
 
 
     @media (max-width: 1000px) {
