--- a/frontend/static/css/patients.scss
+++ b/frontend/static/css/patients.scss
@@ -3,7 +3,7 @@ body {
 }
 
 
-.content {
+.content-patients {
   min-width: 270px;
   background: #E4EBFF;
   height: 100vh;
@@ -161,7 +161,7 @@ body {
   }
 }
 
-.link-button {
+.patients-link-button {
 
 
   &__button {
